# aec-agent

./: .env.example  .gitignore  LICENSE  README.md  README_EXTRACTION.md  TASK_GRAPH_IMPLEMENTATION.md  app.py  demo_notebooks.py  evaluate_agent_performance.py  extraction_summary.json  kb  pyproject.toml  pytest.ini  requirements-streamlit.txt  requirements.txt  streamlit_app.py  test_agent.py  test_agent_tools.py  test_agent_with_tracing.py  test_app_integration.py  test_comprehensive_recovery.py  test_door_distances.py  test_gemini_api.py  test_gpt5_mini_fix.py  test_jit_planning.py  test_real_agent_with_graph.py  test_recovery_evidence.py  test_recovery_messages.py  test_recovery_quick.py  test_report.json  test_streaming_chat.py  test_streamlit_ifc_flow.py  test_streamlit_integration.py  test_tracing_simple.py
.claude/: context.md
.cursor/: rules.md
aec_agent/: __init__.py  agent.py  app.py  config.py  main.py  reasoning_agent.py
docs/: AGENT.md  AGENT_ARCHITECTURE.md  AGENT_EVALUATION_REPORT.md  AGENT_EXECUTION_FLOW.md  AGENT_PLAN.md  BUILDING_TOOLS.md  COMPLIANCE_WORKFLOW_FIXES_SUMMARY.md  CONFIGURATION.md  EXTERNAL_GUARDRAILS.md  GIT_BRANCH_DIAGRAM.md  MEMORY.md  MEMORY_SUMMARIZATION_PLAN.md  MEMORY_SYSTEM.md  PROJECT_STRUCTURE.md  RAG_SETUP.md  REACTIVE_DYNAMIC_AGENT.md  STREAMLIT_DEVELOPMENT.md  STREAMLIT_INTEGRATION_STATUS.md  UNIFIED_CONFIGURATION.md  agent_computational_tools.md  api_reference_md.md  cad_extraction_guide.md  cte_coverage.md  development_guide_md.md  environment_setup.md  git_workflow_md.md  ifc_extraction_guide.md  rag_explained_md.md  (+7 more)
(+299 files in other folders)
