[tool.poetry]
name = "aec-compliance-agent"
version = "1.0.0"
description = "LangChain-powered agent for AEC building compliance analysis"
authors = ["Your Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "2.5.3"
python-dotenv = "1.0.1"
openai = "1.51.0"
streamlit = "1.28.0"
click = "8.1.7"
pytest = "7.4.4"
langchain = "0.2.16"
langsmith = "0.0.87"
langchain-openai = "0.1.25"
langserve = "^0.0.50"
uvicorn = "^0.24.0"
fastapi = "^0.104.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.langchain]
# LangChain Studio configuration
app = "langchain_app:app"